--- a/MathQuiz/app/src/main/res/layout/activity_main.xml
+++ b/MathQuiz/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.missouriwestern.lye.csc445.mathquiz.MainActivity">
+    android:gravity="center"
+    android:orientation="horizontal" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/message"
-        android:id="@+id/textView" />
+        android:text="@string/message"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="horizontal">
 
         <Button
+            android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button"
-        />
+            android:text="@string/true_button"/>
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-        />
+            android:id="@+id/false_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/false_button"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
