--- a/MathQuiz/app/src/main/res/layout/activity_quiz.xml
+++ b/MathQuiz/app/src/main/res/layout/activity_quiz.xml
@@ -19,37 +19,22 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/seven_button"/>
+            android:text="@string/true_button"/>
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/eight_button"/>
+            android:text="@string/false_button"/>
 
     </LinearLayout>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/arrow_left"
-            android:contentDescription="Back"/>
-        <ImageButton
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/arrow_right"
-            android:contentDescription="Next"/>
-
-
-    </LinearLayout>
-
-
+        android:text="@string/next_button"
+        android:drawableRight="@drawable/arrow_right"
+        android:drawablePadding="4dp"/>
 
 </LinearLayout>
