--- a/MathQuiz/app/src/main/res/layout/activity_cheat.xml
+++ b/MathQuiz/app/src/main/res/layout/activity_cheat.xml
@@ -24,7 +24,5 @@
         android:id="@+id/show_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@+id/show_answer_button"/>
-
-
+        android:text="@string/show_answer_button"/>
 </LinearLayout>
