--- a/LY_Softball/app/src/main/res/layout-land/fragment_softball.xml
+++ b/LY_Softball/app/src/main/res/layout-land/fragment_softball.xml
@@ -19,11 +19,13 @@
 			android:hint="@string/softball_last_name_hint"/>
 
 		<EditText
-			android:id="@+id/softball_first_name"
+			android:id="@+id/softball_title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:hint="@string/softball_first_name_hint"
 			android:layout_marginLeft="16dp"/>
+
+
 	</LinearLayout>
 
 
@@ -46,12 +48,6 @@
 				android:layout_height="wrap_content"
 				android:hint="@string/softball_jersey_hint"
 				android:layout_marginTop="16dp"/>
-			
-			<Button
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="16dp"
-				android:id="@+id/date_button"/>
 		</LinearLayout>
 
 		<LinearLayout
