--- a/CriminalIntent/app/src/main/res/layout/activity_fragment.xml
+++ b/CriminalIntent/app/src/main/res/layout/activity_fragment.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_container"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_name"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    />
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    tools:context="edu.missouriwestern.akhan5.csc445.criminalintend.CrimeActivity"
+    >
+
+   <FrameLayout
+       android:id="@+id/fragment_container"
+       android:layout_height="match_parent"
+       android:layout_width="match_parent"
+       xmlns:android="http://schemas.android.com/apk/res/android"
+       >
+    </FrameLayout>
+
+    </RelativeLayout>
+
+
+
